ism_tests/tests/derive/fail/unsupported_type.rs
// Note: Generated by AI assistant
use ism_derive::{Serialize, Deserialize};

// Error: Only String type is supported
#[derive(Serialize, Deserialize)]
struct UnsupportedType {
    num: i32,  // Should fail - numbers not supported
    flag: bool,  // Should fail - booleans not supported
}

fn main() {} 